--- a/templates/results/results.html
+++ b/templates/results/results.html
@@ -1,7 +1,4 @@
-<div id="main-content" class="results">
-    
-    <filter-bar views="[]" current-page="themas"></filter-bar>
-
+<div class="results">
     <div class="container extra">
         <div class="row">
             <div class="col-sm-12">
@@ -41,5 +38,5 @@
     </div>
 
     <results-project-list selected-indicators="vm.selectedIndicators"></results-project-list>
-</div>
 
+</div>
