--- a/templates/programmes/programme-view-detail.html
+++ b/templates/programmes/programme-view-detail.html
@@ -183,6 +183,10 @@
         </div>
     </div>
 
+    <div ng-if="vm.selectedTab == 'results'">
+        <results></results>
+        
+    </div>
 </div>
 
 
