--- a/templates/programmes/programmes-list.html
+++ b/templates/programmes/programmes-list.html
@@ -3,11 +3,11 @@
         <div class="panel lightblue clearfix no-padding-top no-margin-bottom">
             <div class="row">
                 <div class="col-sm-3 col-sm-offset-3 chart">
-                    <oipa-pie-chart group-by="related_activity" aggregation-key="count" aggregations="count,incoming_fund"></oipa-pie-chart>
+                    <oipa-pie-chart group-by="related_activity" aggregation-key="activity_count" aggregations="activity_count,incoming_fund"></oipa-pie-chart>
                     <h4>Project distribution</h4>
                 </div>
                 <div class="col-sm-3 chart">
-                    <oipa-pie-chart group-by="related_activity" aggregation-key="incoming_fund" aggregations="count,incoming_fund"></oipa-pie-chart>
+                    <oipa-pie-chart group-by="related_activity" aggregation-key="incoming_fund" aggregations="activity_count,incoming_fund"></oipa-pie-chart>
                     <h4>Budget distribution</h4>
                 </div>
             </div>
@@ -53,8 +53,6 @@
         <tr>
             <th width="500">Programme title</th>
             <th>Number of projects</th>
-            <!-- <th>Number of countries</th> -->
-            <!-- <th>Number of sectors</th> -->
             <th>Total budget</th>
         </tr>
     </thead>
@@ -63,8 +61,6 @@
             ng-repeat="item in vm.activities">
             <td><a ui-sref="programme({ programme_id: item.related_activity, tab: 'summary' })">{{ item.name }}</a></td>
             <td>{{item.activity_count ? item.activity_count : '0'}} projects</td>
-            <!-- <td>XX countries</td> -->
-            <!-- <td>XX sectors</td> -->
             <td>{{item.incoming_fund ? item.incoming_fund : 0 | shortcurrency :'€'}}</td>
         </tr>
     </tbody>
