--- a/templates/results/results-project-list.html
+++ b/templates/results/results-project-list.html
@@ -23,11 +23,11 @@
             </div> -->
             <!-- <span class="results">Results: <span class="total">{{vm.activities.length}}</span></span> -->
             
-            <!-- <span class="download-list">
+            <span class="download-list">
               <a ng-click="vm.download('json')"><i class="fa fa-download"></i>JSON</a>
               &nbsp;&nbsp;&nbsp;
               <a ng-click="vm.download('csv')"><i class="fa fa-download"></i>CSV</a>
-            </span> -->
+            </span>
         </div>
     </div>
 </div>
@@ -86,7 +86,7 @@
             <td ng-if="item.period_actual_value != null">
               {{item.period_actual_value | number : 0}}
               ({{item.period_target_year | date : 'yyyy'}})
-              <span ng-if="item.period_actual_comment != null" class="comment"></span>
+              <a class="comment" ng-if="item.period_actual_comment != null" tooltips tooltip-template="{{item.period_actual_comment.narratives[0].text}}"></a>
             </td>
             <td ng-if="item.period_actual_value == null">
               Data to be added
@@ -95,7 +95,7 @@
             <td ng-if="item.period_target_value != null">
               {{item.period_target_value | number : 0}}
               ({{item.period_target_year | date : 'yyyy'}})
-              <span ng-if="item.period_target_comment != null" class="comment"></span>
+              <a class="comment" ng-if="item.period_target_comment != null" tooltips tooltip-template="{{item.period_target_comment.narratives[0].text}}"></a>
             </td>
             <td ng-if="item.period_target_value == null">
               Data to be added
