FD98, FD97, FD94, FD99, FD100

--- a/templates/activities/activity-view-detail.html
+++ b/templates/activities/activity-view-detail.html
@@ -189,8 +189,11 @@
                                 </span></td>
                             </tr>
                             <tr>
-                                <td>Policy marker:</td>
-                                <td>Data to be added</td>
+                                <td>Policy marker(s):</td>
+                                <td>
+                                    <span ng-repeat="pm in vm.activity.policy_markers" ng-if="pm.significance.code != 0">{{pm.code.name}}</span>
+                                    <span ng-if='!vm.activity.policy_markers.length'>Data to be added</span>
+                                </td>
                             </tr>
                         </table>
                     </div>
