result select fix

--- a/templates/activities/activity-view-detail.html
+++ b/templates/activities/activity-view-detail.html
@@ -236,8 +236,8 @@
                             <thead>
                                 <tr>
                                     <th>Related activity name</th>
-                                    <th>Related activity ref</th>
-                                    <th>Related activity type</th>
+                                    <th width="30%">Related activity ref</th>
+                                    <th width="30%">Related activity type</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -270,9 +270,9 @@
                             <thead>
                                 <tr>
                                     <th>Organisation name</th>
-                                    <th>Role</th>
-                                    <th>Ref</th>
-                                    <th>Type</th>
+                                    <th width="20%">Role</th>
+                                    <th width="20%">Ref</th>
+                                    <th width="20%">Type</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -342,9 +342,10 @@
                     <div class="table-responsive">
                         <table class="finance no-blue" ng-if="vm.activity.locations.length != 0">
                             <thead>
-                                <tr><th>Ref</th>
-                                    <th>Latitude</th>
-                                    <th>Longitude</th>
+                                <tr>
+                                    <th>Ref</th>
+                                    <th width="30%">Latitude</th>
+                                    <th width="30%">Longitude</th>
                                 </tr>
                             </thead>
                             <tbody>
